import e styled components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,30 @@
 {
-  "extends": "@react-native/typescript-config/tsconfig.json"
+  "extends": "@react-native/typescript-config/tsconfig.json",
+  "compilerOptions": {
+    "strict": true,
+    "baseUrl": "./",
+    "paths": {
+      "assets/*": [
+        "./src/assets/*"
+      ],
+      "components/*": [
+        "./src/components/*"
+      ],
+      "routes/*": [
+        "./src/routes/*"
+      ],
+      "screens/*": [
+        "./src/screens/*"
+      ],
+      "storage/*": [
+        "./src/storage/*"
+      ],
+      "theme/*": [
+        "./src/theme/*"
+      ],
+      "utils/*": [
+        "./src/utils/*"
+      ]
+    }
+  }
 }
