--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
     "react-native-svg": "^13.9.0",
+    "react-native-svg-uri": "^1.2.3",
     "react-native-vector-icons": "^10.0.3",
     "styled-components": "^6.1.8"
   },
