--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "^2.16.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.8.1",
     "react-native-redash": "^18.1.3",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
+    "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "^13.9.0",
     "react-native-svg-uri": "^1.2.3",
     "react-native-vector-icons": "^10.0.3",
